[metadata]
name = python-printer-command-line
version = 1.0.0
author = "Dominique Meurisse"
author_email = "info@mchobby.be"
maintainer = "Oskar Jaskólski"
maintainer_email = "oskarrro90@gmail.com"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = 
    thermal printer
    labels
    zebra
    ZPL
    PCL
[options]
packages = find:
install_requires =
    pyserial==3.5
    pycups==2.0.4
python_requires = >=3.6

[options.packages.find]
include = pypcl

[project.urls]
Homepage = "https://github.com/rrakso/PythonPcl"